--- a/.gitattributes
+++ b/.gitattributes
@@ -27,10 +27,14 @@ freeglut/freeglut.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.kdevelop svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.kdevprj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut.rc svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.spec svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut.tgt svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut.wpj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_evc4.vcp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_evc4.vcw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_static.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut_static.tgt svn_keywords=Author+Date+Id+Revision
 freeglut/include/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
