--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ freeglut/freeglut/Makefile.in
 freeglut/freeglut/aclocal.m4
 freeglut/freeglut/autom4te.cache
 freeglut/freeglut/autoscan.log
+freeglut/freeglut/compile
 freeglut/freeglut/config.guess
 freeglut/freeglut/config.h
 freeglut/freeglut/config.h.in
@@ -13,6 +14,7 @@ freeglut/freeglut/configure
 freeglut/freeglut/configure.scan
 freeglut/freeglut/debugfiles.list
 freeglut/freeglut/debugsources.list
+freeglut/freeglut/depcomp
 freeglut/freeglut/doc/Makefile
 freeglut/freeglut/doc/Makefile.in
 freeglut/freeglut/freeglut-*.tar.gz
@@ -23,6 +25,7 @@ freeglut/freeglut/include/Makefile.in
 freeglut/freeglut/libtool
 freeglut/freeglut/ltmain.sh
 freeglut/freeglut/man-pages
+freeglut/freeglut/missing
 freeglut/freeglut/progs/Makefile
 freeglut/freeglut/progs/Makefile.in
 freeglut/freeglut/progs/demos/CallbackMaker/.deps
